--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -10,6 +10,7 @@
 />
 <meta name="robots" content="noodp" />
 <link rel="canonical" href="{{ .Permalink }}" />
+<link rel="me" href="https://infosec.exchange/@stapia"/>
 
 <!-- head custom -->
 {{- partial "prepended_head.html" . }}
