--- a/layouts/alias.html
+++ b/layouts/alias.html
@@ -3,6 +3,7 @@
 <head>
     <title>{{ .Permalink }}</title>
     <link rel="canonical" href="{{ .Permalink }}"/>
+    <link rel="me" href="https://infosec.exchange/@stapia"/>
     <meta name="robots" content="noindex">
     <meta charset="utf-8"/>
     <noscript>
