--- a/public/css/style.css
+++ b/public/css/style.css
@@ -930,12 +930,12 @@ pre[class*="language-"] {
 .token.inserted {
   color: green; }
 
-pre.line-numbers[class*="language-"] {
+pre[class*="language-"].line-numbers {
   position: relative;
   padding-left: 3.8em;
   counter-reset: linenumber; }
 
-pre.line-numbers[class*="language-"] > code {
+pre[class*="language-"].line-numbers > code {
   position: relative;
   white-space: inherit; }
 
